--- a/PanArctic_DSL_acoustics.Rmd
+++ b/PanArctic_DSL_acoustics.Rmd
@@ -49,7 +49,7 @@ arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic
                         res = c(2, 1)) # cells of 2 degree longitude per 1 degree latitude
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
-cell_res <- 100 # Cell resolution in km
+cell_res <- 150 # Cell resolution in km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
 
 # IHO areas
@@ -148,6 +148,7 @@ SA_integrated <- MVBS %>%
   summarise(depth_integration = max(layer_depth_min) - min(layer_depth_min) + 5, # +5 because each cell is 5m high
             NASC_int = sum(NASC), # integrated backscatter (linear) 
             NASC_int_clean = sum(NASC_clean), # integrated backscatter (linear) thresholded
+            NASC_mean = mean(NASC),
             CM = sum(layer_depth_min * NASC) / sum(NASC)) %>% # centre of mass in meters
   ungroup() %>%
   mutate(SA_int = 10 * log10(NASC_int),
@@ -169,18 +170,18 @@ SA_grid_laea <- data.frame() # Empty dataframe that will be filled with gridded 
 
 for (i in seq(2015, 2017, 1)) { # Data gridding
   SA_tmp <- SA_integrated %>%
-    filter(year == i & day_night == "day") %>%
-    dplyr::select(year, lat, lon, NASC_int, NASC_int_clean, CM)
+    filter(year == i & day_night == "day")
   # Rasterize data in latlon
-  SA_tmp_laea <- SpatialPointsDataFrame(SpatialPoints(cbind(SA_tmp$lon, SA_tmp$lat), 
-                                                        proj4string = CRS("EPSG:4326")),
-                                          data.frame(lat = SA_tmp$lat,
-                                                     lon = SA_tmp$lon,
-                                                     NASC_int = SA_tmp$NASC_int,
-                                                     NASC_int_clean = SA_tmp$NASC_int_clean,
-                                                     CM = SA_tmp$CM)) %>%
+  SA_tmp_laea <- SpatialPointsDataFrame(
+    SpatialPoints(cbind(SA_tmp$lon, SA_tmp$lat), proj4string = CRS("EPSG:4326")),
+    data.frame(lat = SA_tmp$lat,
+               lon = SA_tmp$lon,
+               NASC_int = SA_tmp$NASC_int,
+               NASC_int_clean = SA_tmp$NASC_int_clean,
+               NASC_mean = SA_tmp$NASC_mean,
+               CM = SA_tmp$CM)) %>%
     spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
-    rasterize(., arctic_laea, fun = mean, na.rm = T) %>% # Rasterize data in latlon
+    rasterize(., arctic_laea, fun = median, na.rm = T) %>% # Rasterize data in latlon
     dropLayer(1) %>% # Remove ID layer
     rasterToPoints() %>% # Convert raster to data frame
     as.data.frame() %>%
@@ -190,7 +191,7 @@ for (i in seq(2015, 2017, 1)) { # Data gridding
                                    lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
                                    lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
                          levels = c("BF_CAA", "BB", "SV"))) %>%
-    dplyr::select(year, area, lat, lon, xc, yc, NASC_int, NASC_int_clean, CM) 
+    dplyr::select(year, area, lat, lon, xc, yc, NASC_int, NASC_int_clean, NASC_mean, CM) 
   SA_grid_laea <- bind_rows(SA_grid_laea, SA_tmp_laea)
 }
 rm(SA_tmp, SA_tmp_laea, i) # Remove temporary data
@@ -208,7 +209,7 @@ SA_grid_laea <- SA_grid_laea %>% # Calculate normalized backscatter anomalies
          empty = factor(if_else(SA_int < 0, T, F)),
          empty_clean = factor(if_else(SA_int_clean < 0, T, F))) %>%
     rename(IHO_area = name, area = area.x) %>%
-  dplyr::select(year, xc, yc, lon, lat, IHO_area, area, NASC_int, NASC_int_clean, SA_int, SA_int_clean, CM, empty, empty_clean, cell_res)
+  dplyr::select(year, xc, yc, lon, lat, IHO_area, area, NASC_int, NASC_int_clean, NASC_mean, SA_int, SA_int_clean, CM, empty, empty_clean, cell_res)
 ```
 
 Map to check whether the IHO regions are well implemented.
